--- a/questions.yml
+++ b/questions.yml
@@ -14,7 +14,7 @@ questions:
   group: "Container Images"
   subquestions:
   - variable: image.repository
-    default: "gitlab/gitlab-ce"
+    default: "gitlab/gitlab"
     description: "Gitlab image name"
     type: string
     label: Gitlab Image Name
@@ -42,78 +42,78 @@ questions:
   show_subquestion_if: true
   group: "postgresql Settings"
   subquestions:
-  - variable: gitlab-ce.postgresql.imageTag
+  - variable: gitlab.postgresql.imageTag
     default: "9.6"
     description: "postgresql imageTag"
     type: int
     required: true
     label: postgresql imageTag 
-  - variable: gitlab-ce.postgresql.cpu
+  - variable: gitlab.postgresql.cpu
     default: "1000m"
     description: "postgresql cpu"
     type: string
     required: true
     label: Postgresql CPU 
-  - variable: gitlab-ce.postgresql.memory
+  - variable: gitlab.postgresql.memory
     default: "1Gi"
     description: "postgresql memory"
     type: string
     required: true
     label: Postgresql Memory
-  - variable: gitlab-ce.postgresql.postgresUser
+  - variable: gitlab.postgresql.postgresUser
     default: "gitlab"
     description: "Postgresql User"
     type: string
     required: true
     label: Postgresql User
-  - variable: gitlab-ce.postgresql.postgresPassword
+  - variable: gitlab.postgresql.postgresPassword
     default: "gitlab"
     description: "Postgresql Password"
     type: password
     required: true
     label: Postgresql Password
-  - variable: gitlab-ce.postgresql.postgresDatabase
+  - variable: gitlab.postgresql.postgresDatabase
     default: "gitlab"
     description: "Postgresql Database"
     type: string
     required: true
     label: Postgresql Database
-  - variable: gitlab-ce.postgresql.persistence.enabled
+  - variable: gitlab.postgresql.persistence.enabled
     default: false
     description: "enable persistence storage for PostgreSQL"
     type: boolean
     label: Enable Persistent Storage for PostgreSQL
-  - variable: gitlab-ce.postgresql.persistence.size
+  - variable: gitlab.postgresql.persistence.size
     default: 20Gi
     description: "PostgreSQL persistent volume size"
     type: string
     label: PostgreSQL Persistent Volume Size
-    show_if: "postgresql.enabled=true&&gitlab-ce.postgresql.persistence.enabled=true"
-  - variable: gitlab-ce.postgresql.persistence.storageClass
+    show_if: "postgresql.enabled=true&&gitlab.postgresql.persistence.enabled=true"
+  - variable: gitlab.postgresql.persistence.storageClass
     default: ""
     description: "If undefined or null, uses the default StorageClass. Default to null"
     type: storageclass
     label: Default StorageClass for PostgreSQL
-    show_if: "postgresql.enabled=true&&gitlab-ce.postgresql.persistence.enabled=true"
-  - variable: gitlab-ce.postgresql.resources.requests.cpu
+    show_if: "postgresql.enabled=true&&gitlab.postgresql.persistence.enabled=true"
+  - variable: gitlab.postgresql.resources.requests.cpu
     default: "200m"
     description: "PostgreSQL initial cpu request"
     type: string
     label: PostgreSQL Initial CPU Request
     show_if: "postgresql.enabled=true"
-  - variable: gitlab-ce.postgresql.resources.requests.memory
+  - variable: gitlab.postgresql.resources.requests.memory
     default: "500Mi"
     description: "PostgreSQL initial memory request"
     type: string
     label: PostgreSQL Initial Memory Request
     show_if: "postgresql.enabled=true"
-  - variable: gitlab-ce.postgresql.resources.limits.cpu
+  - variable: gitlab.postgresql.resources.limits.cpu
     default: "1"
     description: "PostgreSQL cpu limit"
     type: string
     label: PostgreSQL CPU Limit
     show_if: "postgresql.enabled=true"
-  - variable: gitlab-ce.postgresql.resources.limits.memory
+  - variable: gitlab.postgresql.resources.limits.memory
     default: "1Gi"
     description: "PostgreSQL memory limit"
     type: string
@@ -128,48 +128,48 @@ questions:
   show_subquestion_if: true
   group: "redis Settings"
   subquestions:
-  - variable: gitlab-ce.redis.redisPassword
+  - variable: gitlab.redis.redisPassword
     default: "gitlab"
     description: "Redis Password"
     type: password
     required: true
     label: Redis Password  
-  - variable: gitlab-ce.redis.persistence.enabled
+  - variable: gitlab.redis.persistence.enabled
     default: false
     description: "enable persistence storage for redis"
     type: boolean
     label: Enable Persistent Storage for redis
-  - variable: gitlab-ce.redis.persistence.size
+  - variable: gitlab.redis.persistence.size
     default: 20Gi
     description: "redis persistent volume size"
     type: string
     label: redis Persistent Volume Size
-    show_if: "redis.enabled=true&&gitlab-ce.redis.persistence.enabled=true"
-  - variable: gitlab-ce.redis.persistence.storageClass
+    show_if: "redis.enabled=true&&gitlab.redis.persistence.enabled=true"
+  - variable: gitlab.redis.persistence.storageClass
     default: ""
     description: "If undefined or null, uses the default StorageClass. Default to null"
     type: storageclass
     label: Default StorageClass for redis
-    show_if: "redis.enabled=true&&gitlab-ce.redis.persistence.enabled=true"
-  - variable: gitlab-ce.redis.resources.requests.cpu
+    show_if: "redis.enabled=true&&gitlab.redis.persistence.enabled=true"
+  - variable: gitlab.redis.resources.requests.cpu
     default: "200m"
     description: "redis initial cpu request"
     type: string
     label: redis Initial CPU Request
     show_if: "redis.enabled=true"
-  - variable: gitlab-ce.redis.resources.requests.memory
+  - variable: gitlab.redis.resources.requests.memory
     default: "500Mi"
     description: "redis initial memory request"
     type: string
     label: redis Initial Memory Request
     show_if: "redis.enabled=true"
-  - variable: gitlab-ce.redis.resources.limits.cpu
+  - variable: gitlab.redis.resources.limits.cpu
     default: "1"
     description: "redis cpu limit"
     type: string
     label: redis CPU Limit
     show_if: "redis.enabled=true"
-  - variable: gitlab-ce.redis.resources.limits.memory
+  - variable: gitlab.redis.resources.limits.memory
     default: "1Gi"
     description: "redis memory limit"
     type: string
@@ -241,7 +241,7 @@ questions:
   show_subquestion_if: true
   group: "Services and Load Balancing"
   subquestions:
-  - variable: ingress.url
+  - variable: ingress.hostname
     default: "xip.io"
     description: "Hostname to your app installation"
     type: hostname
